# segyviewer

resources/: CMakeLists.txt
resources/img/: CMakeLists.txt
resources/text/: CMakeLists.txt  help_dialog_text
src/segyviewlib/: __init__.py  segyviewwidget.py
